@@ -21,9 +21,15 @@ extern "C"
 {
 #endif
 
-#define FAT_ERR_BAD    SDR_ERR_BAD
-#define FAT_ERR_CRC    SDR_ERR_CRC
-#define FAT_ERR_EINVAL SDR_ERR_EINVAL
+#define FAT_ERR_CRC              SDR_ERR_CRC
+#define FAT_ERR_EINVAL           SDR_ERR_EINVAL
+#define FAT_ERR_BAD              10
+#define FAT_ERR_BADSECTORSIZE    11
+#define FAT_ERR_BADSECTORSPERFAT 12
+#define FAT_ERR_FAT12            13
+#define FAT_ERR_UNKNOWNFILESYS   14
+#define FAT_ERR_TOOMANYOPENFILES 15
+
 extern uint8_t fat_errno;
 
 /**
